# firearrow

./: .gitignore  LICENSE.txt  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/kl/firearrow/: ExampleInstrumentedTest.java
app/src/androidTest/java/org/kl/firearrow/db/: CategoryDaoTest.java
app/src/androidTest/java/org/kl/firearrow/setting/: CommonSettingsTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: categories.json  features.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/backtrace/: Backtrace.cpp  Backtrace.hpp  BacktraceFrame.cpp  BacktraceFrame.hpp  BacktraceState.hpp
app/src/main/cpp/core/: LoadLibrary.cpp
app/src/main/cpp/coroutine/: CoroutineError.hpp  CoroutineManager.cpp  FuturePromise.hpp  Generator.hpp  Lazy.hpp  Task.hpp
app/src/main/cpp/fs/: EraseEntry.hpp  FileEraser.cpp  FileEraser.hpp  FileError.hpp  FileManager.cpp  FileUnit.hpp  FileUtil.cpp  FileUtil.hpp  FsEraser.cpp  FsEraser.hpp  FsError.hpp  FsManager.cpp  FsUnit.hpp  FsUtil.cpp  FsUtil.hpp  OverwriteMode.hpp
app/src/main/cpp/jni/: JniException.cpp  JniException.hpp  UniqueJniEnv.cpp  UniqueJniEnv.hpp  UniqueUtfChars.cpp  UniqueUtfChars.hpp
app/src/main/cpp/logging/: Logging.cpp  Logging.hpp
app/src/main/cpp/net/: NetworkError.hpp  NetworkManager.cpp  Socket.cpp  Socket.hpp
app/src/main/cpp/simd/: SimdAbi.hpp  SimdManager.cpp
app/src/main/cpp/util/arrays/: ArrayUtils.hpp
app/src/main/cpp/util/enumeration/: Enumeration.hpp  EnumerationConcepts.hpp
app/src/main/cpp/util/error/: Result.hpp
app/src/main/cpp/util/functional/: Match.hpp  Result.hpp
app/src/main/cpp/util/nullability/: NonNull.hpp  NullabilityConcepts.hpp  Nullable.hpp
app/src/main/cpp/util/property/: Getter.hpp  Property.hpp  Setter.hpp
app/src/main/cpp/util/strings/: NameOf.hpp  StringUtil.cpp  StringUtil.hpp
app/src/main/java/org/kl/firearrow/: MainApplication.java
app/src/main/java/org/kl/firearrow/coroutine/: CoroutineException.java  CoroutineManager.java  Generator.java  Task.java
app/src/main/java/org/kl/firearrow/db/: CommonDatabase.java
app/src/main/java/org/kl/firearrow/di/: CommonModule.java  DatabaseModule.java
app/src/main/java/org/kl/firearrow/fs/: EraseException.java  FileException.java  FileManager.java  FileSystemManager.java  OverwriteMode.java
app/src/main/java/org/kl/firearrow/init/: DebugLogTree.java  ReleaseLogTree.java  TimberInitializer.java  WorkManagersInitializer.java
app/src/main/java/org/kl/firearrow/model/: Category.java  CategoryFeatures.java  Feature.java  Result.java
app/src/main/java/org/kl/firearrow/net/: NetworkException.java  NetworkManager.java  NetworkResult.java
app/src/main/java/org/kl/firearrow/setting/: CommonSettings.java  SettingSerializer.java
app/src/main/java/org/kl/firearrow/simd/: SimdAbi.java  SimdManager.java  SimdResult.java
app/src/main/java/org/kl/firearrow/ui/: MainActivity.java
app/src/main/java/org/kl/firearrow/util/: AssetManagerUtils.java  ContextUtils.java  DateUtils.java
app/src/main/proto/: settings.proto
app/src/main/res/layout/: activity_feature.xml  activity_main.xml  category_item.xml  feature_item.xml  fragment_category.xml
app/src/main/res/navigation/: navigation_graph.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/test/cpp/: CMakeLists.txt  EnumerationTest.cpp  NullabilityTest.cpp  PropertyTest.cpp
app/src/test/java/org/kl/firearrow/: ExampleUnitTest.java
files/: output-metadata.json
gradle/wrapper/: gradle-wrapper.properties
(+32 files in other folders)
